results/SpecGenBench/2-shot/log-TwoSum-2023_11_28_03_30_01.txt
class TwoSum {
    //@ requires nums != null;
    //@ ensures \result != null;
    //@ ensures (\exists int i; 0 <= i && i < \result.length; \result[i] == i && \result[i+1] == j && nums[i] + nums[j] == target);
    //@ ensures (\forall int i; 0 <= i && i < nums.length; (\forall int j; i+1 <= j && j < nums.length; nums[i] + nums[j] != target)) ==> \result.length == 0;
    public int[] twoSum(int[] nums, int target) {
        int n = nums.length;
        for (int i = 0; i < n; ++i) {
            for (int j = i + 1; j < n; ++j) {
                if (nums[i] + nums[j] == target) {
                    return new int[]{i, j};
                }
            }
        }
        return new int[0];
    }
}
/home/max/Documents/JMLGPT/tmp/TwoSum.java:4: error: cannot find symbol
    //@ ensures (\exists int i; 0 <= i && i < \result.length; \result[i] == i && \result[i+1] == j && nums[i] + nums[j] == target);
                                                                                                 ^
  symbol:   variable j
  location: class TwoSum
/home/max/Documents/JMLGPT/tmp/TwoSum.java:4: error: cannot find symbol
    //@ ensures (\exists int i; 0 <= i && i < \result.length; \result[i] == i && \result[i+1] == j && nums[i] + nums[j] == target);
                                                                                                                     ^
  symbol:   variable j
  location: class TwoSum
2 errors

